// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`services.textMessage creating message creates a new chat for message if it doesnt exist 1`] = `
Object {
  "accountSid": null,
  "apiVersion": null,
  "body": "This is a test text message",
  "dateCreated": null,
  "dateUpdated": null,
  "from": "+16043333333",
  "fromCity": null,
  "fromCountry": null,
  "fromState": null,
  "fromZip": null,
  "mediaData": null,
  "numMedia": null,
  "numSegments": null,
  "read": true,
  "smsStatus": null,
  "to": "+17789999999",
  "toCity": null,
  "toCountry": null,
  "toState": null,
  "toZip": null,
  "userId": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
}
`;

exports[`services.textMessage creating message uses an existing chat to insert a message into 1`] = `
Object {
  "accountSid": null,
  "apiVersion": null,
  "body": "This is a test text message",
  "dateCreated": null,
  "dateUpdated": null,
  "from": "+16043333333",
  "fromCity": null,
  "fromCountry": null,
  "fromState": null,
  "fromZip": null,
  "mediaData": null,
  "numMedia": null,
  "numSegments": null,
  "read": true,
  "smsStatus": null,
  "to": "+17789999999",
  "toCity": null,
  "toCountry": null,
  "toState": null,
  "toZip": null,
  "userId": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
}
`;

exports[`services.textMessage marks message as read 1`] = `
Array [
  Object {
    "accountSid": null,
    "apiVersion": null,
    "body": "This is a test text message",
    "chatId": "3180a744-f6b0-4a09-8046-4e713bf5b566",
    "dateCreated": null,
    "dateUpdated": null,
    "from": "+16043333333",
    "fromCity": null,
    "fromCountry": null,
    "fromState": null,
    "fromZip": null,
    "id": "059987cb-3051-4656-98d0-72cda34d32a9",
    "mediaData": null,
    "numMedia": null,
    "numSegments": null,
    "read": true,
    "smsStatus": null,
    "to": "+16045555555",
    "toCity": null,
    "toCountry": null,
    "toState": null,
    "toZip": null,
    "userId": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
  },
  Object {
    "accountSid": null,
    "apiVersion": null,
    "body": "This is a test text message",
    "chatId": "3180a744-f6b0-4a09-8046-4e713bf5b566",
    "dateCreated": null,
    "dateUpdated": null,
    "from": "+16043333333",
    "fromCity": null,
    "fromCountry": null,
    "fromState": null,
    "fromZip": null,
    "id": "059987cb-3051-4656-98d0-72cda34d32a8",
    "mediaData": null,
    "numMedia": null,
    "numSegments": null,
    "read": true,
    "smsStatus": null,
    "to": "+16045555555",
    "toCity": null,
    "toCountry": null,
    "toState": null,
    "toZip": null,
    "userId": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
  },
]
`;

exports[`services.textMessage marks message as unread 1`] = `
Array [
  Object {
    "accountSid": null,
    "apiVersion": null,
    "body": "This is a test text message",
    "chatId": "3180a744-f6b0-4a09-8046-4e713bf5b566",
    "dateCreated": null,
    "dateUpdated": null,
    "from": "+16043333333",
    "fromCity": null,
    "fromCountry": null,
    "fromState": null,
    "fromZip": null,
    "id": "059987cb-3051-4656-98d0-72cda34d32a8",
    "mediaData": null,
    "numMedia": null,
    "numSegments": null,
    "read": false,
    "smsStatus": null,
    "to": "+16045555555",
    "toCity": null,
    "toCountry": null,
    "toState": null,
    "toZip": null,
    "userId": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
  },
  Object {
    "accountSid": null,
    "apiVersion": null,
    "body": "This is a test text message",
    "chatId": "3180a744-f6b0-4a09-8046-4e713bf5b566",
    "dateCreated": null,
    "dateUpdated": null,
    "from": "+16043333333",
    "fromCity": null,
    "fromCountry": null,
    "fromState": null,
    "fromZip": null,
    "id": "059987cb-3051-4656-98d0-72cda34d32a9",
    "mediaData": null,
    "numMedia": null,
    "numSegments": null,
    "read": false,
    "smsStatus": null,
    "to": "+16045555555",
    "toCity": null,
    "toCountry": null,
    "toState": null,
    "toZip": null,
    "userId": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
  },
]
`;
